syntax = "proto3";

import "google/protobuf/timestamp.proto";

package relay;
option go_package = "github.com/modelgate/modelgate/pkg/proto/model/relay";

message AccountApiKey {
  int64 id = 1;
  int64 account_id = 2;
  string account_name = 3;
  string key_name = 4;
  string key = 5;
  string status = 6;
  string scope = 7;
  int64 quote_limit = 8;
  int64 quote_used = 9;
  int64 rate_limit = 10;
  google.protobuf.Timestamp last_used_at = 11;
  google.protobuf.Timestamp expired_at = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}